# MIOTI_DL_ProyectoFinal

./: README.md  demo.ipynb  procesar_pdfs.ipynb  pyproject.toml  template.env
src/: constants.py  llama_ingestion.py  llm.py  prueba_ingesta.ipynb  test.py
src/agents/: llm.py  pipelines.py  test_llms.py
src/ingesta/: archivo_barril.py  pdfs.py  utils.py
src/vectorizacion/: archivo_barril.py  embeddings.py
